--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@
 }
 
 :root {
-    --color-bg: #13005A;
-    --color-bg-variant: #205E61;
-    --color-primary: #FEC868;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
-    --color-white: #FFFFFF;
-    --color-light: rgba(255, 255, 255, 0.6);
+    --color-bg: #035f6b;
+    --color-bg-variant: #2C3930;
+    --color-primary: #E6A4B4;
+    --color-primary-variant: #d7708a;
+    --color-white: #E0E0E0;
+    --color-light: #E0E0E0;
     --color-purple: #B562D6;
 
     --transition: all 400ms ease;
